# batch-image-watermark

./: .gitignore  Cargo.toml  LICENSE  README.md
others/: 需求文档.md
src/: main.rs
